--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/sequelize": "^4.28.19",
+    "@types/validator": "^13.11.8",
     "dotenv": "^16.3.1",
+    "sequelize-typescript": "^2.1.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
